Réparation du bug d'overflow du menu

--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -197,4 +197,8 @@
 
 .site-container {
     overflow-x: hidden;
+
+    @media screen and (min-width: $breakpoint-md) {
+        overflow-y: hidden;
+    }
 }
